--- a/build.gradle
+++ b/build.gradle
@@ -147,3 +147,20 @@ task my_dynamic_property << {
   blah = "my dynamic property"
   println "property value = ${blah}"
 }
+
+task call_custom_task1(type: CustomTask) {
+  sql = 'CREATE DATABASE IF NOT EXISTS example'
+}
+
+task call_custom_task2(type: CustomTask, dependsOn: call_custom_task1) {
+  sql = "GRANT ALL PRIVILEGES ON example.* 
+        TO exampleuser@localhost IDENTIFIED BY 'passw0rd'"
+}
+
+task call_custom_task3(type: MySqlTask, dependsOn: call_custom_task2) {
+  username = 'exampleuser'
+  password = 'passw0rd'
+  database = 'example'
+  sql = 'CREATE TABLE IF NOT EXISTS users 
+        (id BIGINT PRIMARY KEY, username VARCHAR(100))'
+}
